# ludo-king-engine

./: .gitignore  CONFIGURATION.md  INTERFACE_DEMO.md  README.md  demo.py  main.py  pyproject.toml  requirements.txt  tox.ini
.github/workflows/: publish.yml  test-ci.yml
examples/: comprehensive_demo.py  config.py  final_demo.py  tournament.py  tournament_demo.py
ludo/: __init__.py  board.py  constants.py  game.py  player.py  strategy.py  token.py
ludo/strategies/: __init__.py  balanced.py  base.py  cautious.py  claude_strategy.py  defensive.py  gpt_strategy.py  hybrid_prob.py  killer.py  llm_strategy.py  local_llm_strategy.py  optimist.py  probabilistic.py  probabilistic_v2.py  probabilistic_v3.py  random_strategy.py  utils.py  weighted_random.py  winner.py
ludo_engine/: README.md  __init__.py  board.py  config.py  constants.py  game.py  model.py  player.py  strategy.py  token.py  tournament.py
ludo_engine/core/: __init__.py  board.py  constants.py  exceptions.py  game.py  model.py  player.py  token.py  types.py
ludo_engine/models/: __init__.py  constants.py  model.py
ludo_engine/strategies/: __init__.py  advanced.py  balanced.py  base.py  base_strategy.py  cautious.py  defensive.py  factory.py  heuristic.py  human.py  hybrid_prob.py  killer.py  llm.py  (+9 more)
ludo_engine_simple/: __init__.py  board.py  constants.py  game.py  player.py  strategy.py  token.py
ludo_engine_strategies/: __init__.py  base.py  llm_strategy.py  strategy.py  utils.py
ludo_interface/: README.md  __init__.py  app.py  board_viz.py  event_handler.py  game_manager.py  ui_builder.py  utils.py
tests/: test_basic.py  test_board.py  test_completion.py  test_core.py  test_game.py  test_integration.py  test_llm_strategy.py  test_player.py  test_strategies.py  test_strategy.py  test_token.py  test_token_positioning.py  test_utils.py
(+61 files in other folders)
